<modify> Sybols => baseSymbol 이름 변경, slice state, action 생성 함수 전면 수정, slice state에서 symbols로 관리하던 배열 src > data > data.json으로 이동

--- a/week2-3/my-mock-api/package.json
+++ b/week2-3/my-mock-api/package.json
@@ -7,6 +7,6 @@
     "json-server": "^1.0.0-alpha.23"
   },
   "scripts": {
-    "mock-start": "json-server --watch db.json --port 5001"
+    "mock_start": "json-server --watch db.json --port 5001"
   }
 }
